@@ -1,3 +1,7 @@
+Tue Jul 13 12:04:57 2010  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* missing/close.c: keep original errno.
+
 Thu Jul  8 00:15:50 2010  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* gem_prelude.rb: provide workaround for gem activation.  Currently,
